--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,26 @@
 server:
   port: 8090
+#连接数据库
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3308/springboot-project?characterEncoding=utf-8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=UTC
+    username: root
+    password: queena1991
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+      max-active: 20
+      active-connections: 6
+      max-wait: 30000
+      initial-size: 20
+      min-idle: 5
+      validation-query: select 1 from dual   #验证数据库心跳的SQL
+      validation-query-timeout: 1
+#mybatis-plus配置
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  global-config:
+    db-config:
+      logic-delete-value: 1        #配置删除值（默认为1）
+      logic-not-delete-value: 0    #配置未删除值（默认为0）
